--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,12 +2,14 @@
 <html>
 <head>
   <link rel="stylesheet" href="/css/application.css">
-  <script src="/js/application.js"></script>
+
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="/js/application.js"></script>
   <title>See-ly v1.0</title>
 </head>
 <body>
-  <img src="img/see-ly-2.jpg" width="234" height="142">
   <%= yield %>
 </body>
 <footer>
